# zugawatch

./: .gitignore  CHANGELOG.md  README.md  action.yml  pyproject.toml  server.json  smithery.yaml
.github/workflows/: publish.yml
benchmark/: RESULTS.md  dataset.py  run.py
examples/: workflow.yml
fieldtest/: WRITEUP.md  WRITEUP_TEMPLATE.md  fetch.py  run.py
src/mcp_sentinel/: __init__.py  cli.py  proxy.py
src/zugawatch/: __init__.py  anomaly.py  cli.py  grade.py  pinning.py  proxy.py  scan.py  server.py
src/zugawatch/rules/: __init__.py  builtin.py
tests/: fake_server.py  test_anomaly.py  test_benchmark.py  test_grade.py  test_pinning.py  test_proxy.py  test_scan.py
