[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-sentinel"
version = "0.2.0"
description = "Runtime call-chain anomaly monitor for MCP servers — rug-pull detection + behavioural anomaly rules, delivered as a CLI, a GitHub Action, and an MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Antonio Delgado", email = "antwonthegr8@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "security", "ai-agents", "anomaly-detection", "llm", "agent-security", "rug-pull"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
]
dependencies = []  # zero-dependency core, like ZugaShield

[project.optional-dependencies]
server = ["mcp>=1.2.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/Zuga-luga/mcp-sentinel"
Repository = "https://github.com/Zuga-luga/mcp-sentinel"
Issues = "https://github.com/Zuga-luga/mcp-sentinel/issues"

[project.scripts]
sentinel = "mcp_sentinel.cli:main"
sentinel-mcp = "mcp_sentinel.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_sentinel"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
