[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zugawatch"
version = "0.7.0"
description = "Runtime call-chain anomaly monitor for MCP servers — rug-pull detection + behavioural anomaly rules, delivered as a CLI, a GitHub Action, and an MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Antonio Delgado", email = "antwonthegr8@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "security", "ai-agents", "anomaly-detection", "llm", "agent-security", "rug-pull"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
]
dependencies = []  # zero-dependency core, like ZugaShield

[project.optional-dependencies]
server = ["mcp>=1.2.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/Zuga-luga/zugawatch"
Repository = "https://github.com/Zuga-luga/zugawatch"
Issues = "https://github.com/Zuga-luga/zugawatch/issues"

[project.scripts]
zugawatch = "zugawatch.cli:main"
zugawatch-mcp = "zugawatch.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zugawatch"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
